fixed sheduling algorithm