@@ -3,20 +3,18 @@ package com.renting.RentThis.service;
 import com.renting.RentThis.entity.Booking;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration; // <-- Import Duration
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 
 @Service
 public class IntervalSchedulingService {
 
-    /**
-     * Represents a time slot with start and end times
-     */
+    // TimeSlot class remains the same...
     public static class TimeSlot {
         private final LocalDateTime start;
         private final LocalDateTime end;
@@ -36,41 +34,33 @@ public class IntervalSchedulingService {
 
         @Override
         public String toString() {
-            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm");
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
             return start.format(formatter) + " to " + end.format(formatter);
         }
     }
 
-    /**
-     * Check if a requested time slot overlaps with any existing bookings
-     * @param existingBookings List of existing bookings
-     * @param requestedStart Requested start time
-     * @param requestedEnd Requested end time
-     * @return List of overlapping time slots, empty if no overlaps
-     */
+    // findOverlappingSlots remains the same...
     public List<TimeSlot> findOverlappingSlots(List<Booking> existingBookings,
                                                LocalDateTime requestedStart,
                                                LocalDateTime requestedEnd) {
         List<TimeSlot> overlaps = new ArrayList<>();
-
         for (Booking booking : existingBookings) {
-            // Check if there's an overlap
             if (!(requestedEnd.isBefore(booking.getStartTime()) ||
                     requestedStart.isAfter(booking.getEndTime()))) {
                 overlaps.add(new TimeSlot(booking.getStartTime(), booking.getEndTime()));
             }
         }
-
         return overlaps;
     }
 
+
     /**
      * Find available time slots within a requested time range
-     * based on existing bookings
+     * based on existing bookings, ensuring a minimum duration.
      * @param existingBookings List of existing bookings
      * @param requestedStart Requested start time
      * @param requestedEnd Requested end time
-     * @return List of available time slots
+     * @return List of available time slots (at least 30 minutes long)
      */
     public List<TimeSlot> findAvailableTimeSlots(List<Booking> existingBookings,
                                                  LocalDateTime requestedStart,
@@ -78,44 +68,49 @@ public class IntervalSchedulingService {
         // Sort bookings by start time
         List<Booking> sortedBookings = existingBookings.stream()
                 .sorted((b1, b2) -> b1.getStartTime().compareTo(b2.getStartTime()))
-                .toList();
+                .toList(); // Or .collect(Collectors.toList()) if using older Java
 
         List<TimeSlot> availableSlots = new ArrayList<>();
 
         if (sortedBookings.isEmpty()) {
-            // No bookings, entire requested time is available
-            availableSlots.add(new TimeSlot(requestedStart, requestedEnd));
+            // No bookings, check if the entire requested time meets the minimum duration
+            if (Duration.between(requestedStart, requestedEnd).toMinutes() >= 30) {
+                availableSlots.add(new TimeSlot(requestedStart, requestedEnd));
+            }
             return availableSlots;
         }
 
-        // Check if there's time available before the first booking
         LocalDateTime currentTime = requestedStart;
 
         for (Booking booking : sortedBookings) {
-            // If the booking starts after our current position, we have a free slot
             if (currentTime.isBefore(booking.getStartTime())) {
+                // Potential slot found, add it for now (will be filtered later)
                 availableSlots.add(new TimeSlot(currentTime, booking.getStartTime()));
             }
-
-            // Move current time pointer to after this booking if needed
             if (currentTime.isBefore(booking.getEndTime())) {
                 currentTime = booking.getEndTime();
             }
         }
 
-        // Check if there's time available after the last booking
         if (currentTime.isBefore(requestedEnd)) {
+            // Potential slot found, add it for now (will be filtered later)
             availableSlots.add(new TimeSlot(currentTime, requestedEnd));
         }
 
-        return availableSlots;
+        // Define the minimum duration required
+        final long MINIMUM_DURATION_MINUTES = 30;
+
+        // Filter the generated slots
+        return availableSlots.stream()
+                // 1. Ensure start is strictly before end (prevents zero-length slots)
+                .filter(slot -> slot.getStart().isBefore(slot.getEnd()))
+                // 2. Ensure the duration is at least the minimum required minutes
+                .filter(slot -> Duration.between(slot.getStart(), slot.getEnd())
+                        .toMinutes() >= MINIMUM_DURATION_MINUTES)
+                .collect(Collectors.toList());
     }
 
-    /**
-     * Format a list of time slots into a human-readable string
-     * @param slots List of time slots
-     * @return Formatted string of time slots
-     */
+    // formatTimeSlots remains the same...
     public String formatTimeSlots(List<TimeSlot> slots) {
         return slots.stream()
                 .map(TimeSlot::toString)
